[gd_scene load_steps=9 format=3 uid="uid://b3gb6j2g64qqa"]

[ext_resource type="Script" path="res://BattleSystems/BattlefieldManager.gd" id="1_ubwb4"]
[ext_resource type="Script" path="res://BattleSystems/InitiativeTracker.gd" id="2_oep6u"]
[ext_resource type="Script" path="res://BattleSystems/CombatStateMachine.gd" id="3_com16"]
[ext_resource type="Script" path="res://BattleSystems/States/PlayerState.gd" id="4_q2neg"]
[ext_resource type="Script" path="res://BattleSystems/States/EnemyState.gd" id="5_04e5c"]
[ext_resource type="Script" path="res://BattleSystems/States/RewardState.gd" id="6_28yvg"]
[ext_resource type="Script" path="res://BattleSystems/States/GameOverState.gd" id="7_hc5bd"]
[ext_resource type="PackedScene" uid="uid://bw5wgs3tjxkp1" path="res://BattleSystems/EntityComponents/PlayerEntity/player_entity.tscn" id="8_4gulr"]

[node name="Battlefield" type="Node"]
script = ExtResource("1_ubwb4")

[node name="InitiativeTracker" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("2_oep6u")

[node name="CombatStateMachine" type="Node" parent="."]
unique_name_in_owner = true
script = ExtResource("3_com16")

[node name="PlayerState" type="Node" parent="CombatStateMachine"]
script = ExtResource("4_q2neg")

[node name="EnemyState" type="Node" parent="CombatStateMachine"]
script = ExtResource("5_04e5c")

[node name="RewardState" type="Node" parent="CombatStateMachine"]
script = ExtResource("6_28yvg")

[node name="GameOverState" type="Node" parent="CombatStateMachine"]
script = ExtResource("7_hc5bd")

[node name="PlayerEntity" parent="." instance=ExtResource("8_4gulr")]
unique_name_in_owner = true
